fix beer header on mobile

--- a/mlb-beer/css/main.css
+++ b/mlb-beer/css/main.css
@@ -279,6 +279,7 @@ th td.park {
     display: none;
   }
   th td {
+    padding-top: 20px!important;
     font-size: 12px!important;
   }
   th td:after {
